# RoboRTS-Ultra96

./: README.md
roborts_camera/: camera_node.cpp  camera_node.h
roborts_camera/config/: camera_param.prototxt
roborts_detection/: CMakeLists.txt  README.md
roborts_detection/armor_detection/: CMakeLists.txt  armor_detection_client.cpp  armor_detection_node.cpp  armor_detection_node.cpp.bp  armor_detection_node.h  armor_detection_node.h.bp  gimbal_control.cpp  gimbal_control.h
roborts_detection/armor_detection/autoAiming/extra_files/camera_calibration_parameter/: extrinsics.yml  intrinsics.yml
roborts_detection/armor_detection/autoAiming/include/armor_finder/: armor_finder.h  constant.h  param_struct_define.h
roborts_detection/armor_detection/autoAiming/include/camera/: camera_wrapper.h  video_wrapper.h  wrapper_head.h
roborts_detection/armor_detection/autoAiming/include/tools/: calibrate_tool.h
roborts_detection/armor_detection/autoAiming/include/tracker/: kcftracker.hpp  recttools.hpp  tracker.h
roborts_detection/armor_detection/autoAiming/src/armor_finder/: armor_finder.cpp  armor_finder_main_stream.cpp  show_images.cpp
roborts_detection/armor_detection/autoAiming/src/armor_finder/IspPipline/: isp_pipline.cpp
roborts_detection/armor_detection/autoAiming/src/armor_finder/calibrate_source/: calibrate.cpp
roborts_detection/armor_detection/autoAiming/src/armor_finder/state_machine/: compute_angle.cpp  searching_target.cpp  stand_by.cpp  tracking_target.cpp  transfer_state.cpp
roborts_detection/armor_detection/autoAiming/src/armor_finder/target_detection/: .find_light_blob.cpp.swp  find_light_blob.cpp  match_armor_boxes.cpp  match_light_blob.cpp
roborts_detection/armor_detection/autoAiming/src/armor_finder/target_position/: convert_to_3d_coordinate.cpp  predict_armor_position.cpp  target_stream_control.cpp
roborts_detection/armor_detection/autoAiming/src/armor_finder/target_send_data/: send_target_by_uart.cpp
roborts_detection/armor_detection/autoAiming/src/armor_finder/target_tracking/: armor_track.cpp
roborts_detection/armor_detection/autoAiming/src/camera/: camera_wrapper.cpp  video_wrapper.cpp
roborts_detection/armor_detection/autoAiming/src/tools/: calibrate_tool.cpp
roborts_detection/armor_detection/autoAiming/src/tracker/: fhog.cpp  kcftracker.cpp
roborts_detection/armor_detection/config/: armor_detection.prototxt
roborts_detection/armor_detection/constraint_set/: CMakeLists.txt  XF_Accel.h  constraint_set.cpp  constraint_set.h  xf_headers.h
roborts_detection/armor_detection/constraint_set/config/: constraint_set.prototxt
roborts_detection/armor_detection/constraint_set/proto/: constraint_set.pb.cc  constraint_set.pb.h  constraint_set.proto
roborts_detection/armor_detection/constraint_set/svm_predictor/: CMakeLists.txt  svm_predictor.cpp  svm_predictor.h  test.cpp
roborts_detection/armor_detection/constraint_set/svm_predictor/config/: svm_predictor.prototxt
roborts_detection/armor_detection/constraint_set/svm_predictor/proto/: svm_predictor.pb.cc  svm_predictor.pb.h  svm_predictor.proto
roborts_detection/util/: cv_toolbox.h
roborts_detection/yolo_FPGA/: CMakeLists.txt
roborts_detection/yolo_FPGA/include/: yolo_detect.h  yolo_messenger.h
roborts_detection/yolo_FPGA/include/xilinx/base/: banner.hpp  base.hpp  c++14.hpp  env_config.hpp  profiling.hpp  simple_config.hpp
roborts_detection/yolo_FPGA/include/xilinx/base/dpu/: dpu_task.hpp  time_measure.hpp
roborts_detection/yolo_FPGA/include/xilinx/base/queue/: bounded_queue.hpp  linked_list_queue.hpp  nocopy_bounded_queue.hpp  ring_queue.hpp  shared_queue.hpp  sorted_queue.hpp
roborts_detection/yolo_FPGA/include/xilinx/benchmark/: benchmark.hpp  image_list.hpp  stat_samples.hpp
roborts_detection/yolo_FPGA/include/xilinx/classification/: classification.hpp
roborts_detection/yolo_FPGA/include/xilinx/config/: XILINX_AI_SDK.pb.h  config.hpp
roborts_detection/yolo_FPGA/include/xilinx/demo/: demo.hpp  dpdrm.hpp
roborts_detection/yolo_FPGA/include/xilinx/facedetect/: facedetect.hpp
roborts_detection/yolo_FPGA/include/xilinx/map/: expand_and_align.hpp  globalavepool.hpp  image_util.hpp  tilling.hpp
roborts_detection/yolo_FPGA/include/xilinx/math/: fp16_base.hpp  max_index.hpp  softmax.hpp  ssd_normalizer.hpp
roborts_detection/yolo_FPGA/include/xilinx/multitask/: multitask.hpp
roborts_detection/yolo_FPGA/include/xilinx/openpose/: openpose.hpp
roborts_detection/yolo_FPGA/include/xilinx/posedetect/: posedetect.hpp
roborts_detection/yolo_FPGA/include/xilinx/refinedet/: refinedet.hpp
roborts_detection/yolo_FPGA/include/xilinx/roadline/: roadline.hpp
roborts_detection/yolo_FPGA/include/xilinx/segmentation/: segmentation.hpp
roborts_detection/yolo_FPGA/include/xilinx/ssd/: ssd.hpp
roborts_detection/yolo_FPGA/include/xilinx/yolov3/: yolov3.hpp
roborts_detection/yolo_FPGA/src/: yolo_detect.cpp  yolo_messenger.cpp
roborts_serial/: CMakeLists.txt  infantry_info.h  package.xml  serial_com_node.cpp  serial_com_node.h
roborts_serial/config/: serial_com_config.prototxt
roborts_serial/proto/: serial_com_config.pb.cc  serial_com_config.pb.h  serial_com_config.proto
